k8s/FastAPI-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: munggae-ai-ingress
  
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: munggae-ai-service
              servicePort: 8080
              path: /
              pathType: Prefix
